Change the title and headers format

--- a/Unsupervised Machine Learning trading.ipynb
+++ b/Unsupervised Machine Learning trading.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div align='center'>\n",
+    "  <font size='8'>PROJECT S&P 500 UNSUPERVISED MACHINE LEARNING TRADING STRATEGY</font>\n",
+    "</div>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<font color='violet' size='6'> 1. Import essential libraries and wrangling data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -247,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Calculate features and technical indicators for each stock\n",
+    "<font color='violet' size='6'>2. Calculate features and technical indicators for each stock</font>\n",
     "\n",
     "- German-Klass Volatility\n",
     "- RSI \n",
@@ -600,7 +616,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Aggregate to monthly level and filter top 150 most liquid stocks for each month.\n",
+    "<font color='violet' size='6'>3. Aggregate to monthly level and filter top 150 most liquid stocks for each month.</font>\n",
     "- To reduce training time and experiment with features and strategies, we convert the business-daily data to month-end frequency"
    ]
   },
@@ -846,10 +862,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "- calculate 5-year rolling average of dollar volume for each stocks before filtering"
    ]
@@ -1085,7 +1099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "4. Calculate Monthly Returns for different time horizons as features\n",
+    "<font color='violet' size='6'>4. Calculate Monthly Returns for different time horizons as features</font>\n",
     "- To capture time series dynamics that reflect, for example, momentum patterns, we compute historical returns using the method .pct_change(lag), that is, returns over various monthly periods as identified by lags\n",
     "- In this section we also clipping the extreme values in the model. The reason for that is there will be outliers of stocks throughout the years and if we put that into training the model, it will affect the model dramatically. So we want to model things that happened frequently"
    ]
@@ -1426,7 +1440,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "5. Download Fama-French Factors and calulate Rolling Factor Betas.\n",
+    "<font color='violet' size='6'>5. Download Fama-French Factors and calulate Rolling Factor Betas.</font>\n",
     "- We will introduce the Fama-French data to estimate the exposure of assets to common risk factors using lineat regression.\n",
     "- The five Fama-French factors, namely market risk, size, value, operating profitability, and investment have been shown empirically to explain asset returns and are commonly used to assess the risk/return profile of portfolios. Hence, it is natural to include past factor exposures as financial features in models.\n",
     "- We can access the historical factor returns using the pandas-datareader and estimate historical exposures using the RollingOLS rolling linear regression.\n",
@@ -2064,7 +2078,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. For each month fir a K-Means Clustering Algorithms to group similar assets based on their features.\n",
+    "<font color='violet' size='6'>6. For each month fit a K-Means Clustering Algorithms to group similar assets based on their features.</font>\n",
     "\n",
     "K-Means Clustering\n",
     "- You may want to initialise predefined centroids for each cluster based on your research\n",
